--- a/docs/09-I18n.md
+++ b/docs/09-I18n.md
@@ -1,4 +1,11 @@
 # I18n
+By default, all error messages are `strings`. But if you build an i18n'ized app, you can set `message` type in the form config to own type. E.g.:
+
+```reason
+type message = I18n.t;
+```
+
+Then errors returned from all validators must be of this type.
 
 ---
 
