Add Caveats doc

--- a/docs/09-I18n.md
+++ b/docs/09-I18n.md
@@ -9,4 +9,4 @@ Then errors returned from all validators must be of this type.
 
 ---
 
-Next: **[API →](./10-API.md)**
+Next: **[Caveats →](./10-Caveats.md)**
