remove incorrect change

--- a/docs/03-IO.md
+++ b/docs/03-IO.md
@@ -10,7 +10,7 @@ type input = {email: string};
 type output = {email: Email.t};
 ```
 
-To turn the former into the latter, you must define function, which takes `input` and returns `result`: either `Ok<Email.t>` or `Error<message>`. More on this, in the next sections.
+To turn the former into the latter, you must define function, which takes `input` and returns `result`: either `Ok(Email.t)` or `Error(message)`. More on this, in the next sections.
 
 ---
 
